--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "animatable": "^1.2.3",
     "expo": "~50.0.14",
+    "expo-av": "^13.10.6",
     "expo-constants": "~15.4.5",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
@@ -17,6 +19,7 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-animatable": "^1.4.0",
     "react-native-appwrite": "^0.2.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
