--- a/package.json
+++ b/package.json
@@ -10,28 +10,28 @@
   },
   "dependencies": {
     "animatable": "^1.2.3",
-    "expo": "~50.0.14",
-    "expo-av": "~13.10.6",
-    "expo-constants": "~15.4.5",
-    "expo-document-picker": "^11.10.1",
-    "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.8",
-    "expo-status-bar": "~1.11.1",
+    "expo": "~51.0.7",
+    "expo-av": "~14.0.5",
+    "expo-constants": "~16.0.1",
+    "expo-document-picker": "~12.0.1",
+    "expo-image-picker": "~15.0.5",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.14",
+    "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "0.74.1",
     "react-native-animatable": "^1.4.0",
     "react-native-appwrite": "^0.2.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-url-polyfill": "^2.0.0",
-    "expo-image-picker": "~14.7.1"
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.2.79",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.1.3"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
